Fixed form "ENTER" glitch

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,7 +35,7 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  <form>
+                  <form id="newClassForm">
                     <div class="form-group">
                       <label for="newClassName">Class Name</label>
                       <input type="text" class="form-control" id="newClassName" placeholder="Software Documentation & Design">
@@ -60,7 +60,7 @@
                   </button>
                 </div>
                 <div class="modal-body">
-                  <form>
+                  <form id="newTaskForm">
                     <div class="form-group">
                       <label for="newTaskName">Task Name</label>
                       <input type="text" class="form-control" id="newTaskText" placeholder="Software Documentation & Design">
